Major refactoring: Implement Layer interface and Model architecture
- Added layer_base.h/c for polymorphic Layer interface with vtable
- Created fc_layer.h/c for FC, ReLU, Softmax, and Flatten layers
- Created model.h/c for automatic forward/backward propagation management
- Refactored Conv and Pool layers to implement Layer interface
- Simplified main.c training loop from 180+ lines to ~40 lines
- Automatic memory management for intermediate outputs
- Easy extensibility for adding new layer types

--- a/C-CNNtest/C-CNNtest.vcxproj
+++ b/C-CNNtest/C-CNNtest.vcxproj
@@ -128,21 +128,27 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="activations.c" />
+    <ClCompile Include="fc_layer.c" />
     <ClCompile Include="image_util.c" />
+    <ClCompile Include="layer_base.c" />
     <ClCompile Include="layers.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="matrix.c" />
     <ClCompile Include="mnist.c" />
+    <ClCompile Include="model.c" />
     <ClCompile Include="network.c" />
     <ClCompile Include="io.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="activations.h" />
+    <ClInclude Include="fc_layer.h" />
     <ClInclude Include="image_util.h" />
     <ClInclude Include="io.h" />
+    <ClInclude Include="layer_base.h" />
     <ClInclude Include="layers.h" />
     <ClInclude Include="matrix.h" />
     <ClInclude Include="mnist.h" />
+    <ClInclude Include="model.h" />
     <ClInclude Include="network.h" />
     <ClInclude Include="stb_image.h" />
   </ItemGroup>
